C2LC-391: Fix an issue where AddNode button's plus sign gets shifted when focused

--- a/src/AddNode.scss
+++ b/src/AddNode.scss
@@ -18,7 +18,7 @@ button.btn.AddNode__expanded-button {
     padding: $addNodeExpandedButtonPadding;
     position: relative;
     z-index: 2;
-    width: 45px;    
+    width: 45px;
     height: 45px;
 
     svg {
@@ -31,7 +31,7 @@ button.btn.AddNode__expanded-button {
     }
 
     &:focus {
-        border: none;
+        border: $addNodeExpandedButtonBorderWidth solid transparent;
         box-shadow: 0 0 0 $c2lc-focus-indicator-width white;
     }
 
