--- a/src/Themes.scss
+++ b/src/Themes.scss
@@ -242,7 +242,7 @@ body.light-theme {
 
     button.btn.AddNode__expanded-button {
         background-color: white;
-        border: 3px solid #505862;
+        border: 2px solid #505862;
 
         &:not(.AddNode__expanded-button--isDragTarget) {
             box-shadow: none;
@@ -778,7 +778,7 @@ body.gray-theme {
         &:focus {
             outline: $c2lc-focus-indicator-width solid $c2lc-focus-indicator-color;
         }
-    
+
         &:hover:not(.ProgramBlockEditor__character-position-button--disabled) {
             path.filled {
                 fill: #505862;
@@ -1476,7 +1476,7 @@ body.contrast-theme {
     .ProgramBlockEditor__character-position-button {
         &:focus {
             outline: $c2lc-focus-indicator-width solid white;
-        }        
+        }
     }
 
     .ProgramBlockEditor__character-position-button:not(.ProgramBlockEditor__character-position-button--disabled) {
